--- a/analytics-service/Dockerfile
+++ b/analytics-service/Dockerfile
@@ -9,11 +9,11 @@ RUN apk add --no-cache git ca-certificates
 # Copy go mod files
 COPY go.mod go.sum* ./
 
-# Download dependencies first
-RUN go mod download
-
 # Copy source code
 COPY . .
+
+# Download dependencies and tidy
+RUN go mod download && go mod tidy
 
 # Build for Linux
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o main ./cmd/server
