--- a/exchange-service/Dockerfile
+++ b/exchange-service/Dockerfile
@@ -33,7 +33,16 @@ RUN set -eux; \
         if go mod download; then \
             break; \
         else \
-            echo "Attempt $i failed, retrying in 10 seconds..."; \
+            echo "Download attempt $i failed, retrying in 10 seconds..."; \
+            sleep 10; \
+        fi; \
+    done; \
+    echo "Running go mod tidy..."; \
+    for i in 1 2 3 4 5; do \
+        if go mod tidy; then \
+            break; \
+        else \
+            echo "Tidy attempt $i failed, retrying in 10 seconds..."; \
             sleep 10; \
         fi; \
     done; \
